7-k8s/14-k8s-network/01-default-ns-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx # pod name
  labels:
    project: default
    environment: dev
    purpose: poc
spec:
  containers:
  - name: nginx # container name
    image: nginx # by default it will get from docker hub
