7-k8s/14-k8s-network/roboshop-ns-network.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: roboshop
  name: nginx # pod name
  labels:
    project: roboshop
    environment: dev
    purpose: poc
spec:
  containers:
  - name: nginx # container name
    image: nginx # by default it will get from docker hub
