7-k8s/14-k8s-network/03-roboshop-ns-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: roboshop-deny-ingress
  namespace: roboshop # Change this to your target namespace
spec:
  podSelector: {} # An empty selector selects ALL pods in the namespace
  policyTypes:
    - Ingress
