7-k8s/14-k8s-network/04-testing-MongoDB.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb
  namespace: roboshop
spec:
  podSelector:
    matchLabels:
      project: roboshop
      tier: database
      component: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          project: roboshop
          tier: backend
          component: catalogue
    - podSelector:
        matchLabels:
          project: roboshop
          tier: backend
          component: cart
    ports:
    - protocol: TCP
      port: 27017
