7-k8s/14-k8s-network/05-roboshop-Allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  namespace: roboshop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: monitoring
    ports:
    - protocol: TCP
      port: 9090
